handle regex and make language switch content configurable

--- a/blocks/nhtsa-header/nhtsa-header.css
+++ b/blocks/nhtsa-header/nhtsa-header.css
@@ -42,6 +42,10 @@
   background-color: var(--c-cta-blue-active);
 }
 
+.nhtsa-header .hide {
+  display: none;
+}
+
 @media (min-width: 1200px) {
   :root {
     --nhtsa-header-gutter: 32px;
