#175 - Adjust the PDP Hero height

--- a/blocks/v2-hero/v2-hero.css
+++ b/blocks/v2-hero/v2-hero.css
@@ -33,7 +33,7 @@
 
 /* Reduce the Hero height by the inpage-navigation height */
 .v2-inpage-navigation-wrapper + .v2-hero-container .v2-hero {
-  height: calc(100vh - (var(--nav-height) * 2));
+  height: calc(100vh - (var(--nav-height) + var(--inpage-navigation-height) - 2px));
 }
 
 .section.v2-hero-container {
