remove language switch code

--- a/blocks/vin-number/vin-number.css
+++ b/blocks/vin-number/vin-number.css
@@ -64,7 +64,8 @@
   margin-top: 10px;
 }
 
-.vin-number__recall-incomplete {
+.vin-number__recall-incomplete,
+.vin-number__recall-incomplete-no-remedy {
   color: var(--c-error-red);
 }
 
