--- a/blocks/vin-number/vin-number.css
+++ b/blocks/vin-number/vin-number.css
@@ -21,6 +21,11 @@
   max-width: 100%;
 }
 
+.vin-number__form .vin-number__submit:disabled {
+  background-color: var(--overlay-background-color);
+  cursor: unset;
+}
+
 .vin-number__label {
   left: var(--input-padding);
   pointer-events: none;
@@ -54,6 +59,7 @@
   align-items: center;
   gap: 16px;
   margin-bottom: 5px;
+  flex-wrap: wrap;
 }
 
 .vin-number__recalls-heading {
