--- a/blocks/v2-inpage-navigation/v2-inpage-navigation.css
+++ b/blocks/v2-inpage-navigation/v2-inpage-navigation.css
@@ -11,7 +11,7 @@
   top: var(--nav-height);
   width: 100%;
   z-index: var(--z-index-inpage-nav);
-  transition: transform 300ms ease-in-out;
+  transition: transform var(--duration-medium) ease-in-out;
 }
 
 /* As the first section in main doesn't need to have padding-top
@@ -23,7 +23,7 @@ then we change it for the next section item in main */
 
 .v2-inpage-navigation--open .v2-inpage-navigation__items-container {
   transform: translateY(-100%);
-  transition: transform 450ms var(--easing-entrance);
+  transition: transform var(--duration-large) var(--easing-entrance);
 }
 
 .v2-inpage-navigation--hidden.v2-inpage-navigation-wrapper {
