--- a/blocks/v2-truck-lineup/v2-truck-lineup.css
+++ b/blocks/v2-truck-lineup/v2-truck-lineup.css
@@ -111,7 +111,7 @@ main .section.v2-truck-lineup-container .v2-truck-lineup-wrapper {
 
 .v2-truck-lineup__text {
   margin: 0 auto;
-  max-width: 400px;
+  max-width: 506px;
   text-wrap: balance;
 }
 
@@ -128,11 +128,15 @@ p.v2-truck-lineup__description {
 }
 
 .v2-truck-lineup__buttons-container {
-  margin-top: 32px;
+  margin-top: 16px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 16px;
 }
 
 .v2-truck-lineup__buttons-container .button-container {
-  margin: 10px 0;
+  margin: 16px 0 0;
 }
 
 /* Navigation */
@@ -265,15 +269,6 @@ ul.v2-truck-lineup__navigation {
   .v2-truck-lineup__arrow-controls {
     display: block;
   }
-
-  .v2-truck-lineup__buttons-container {
-    display: flex;
-    justify-content: center;
-  }
-
-  .v2-truck-lineup__buttons-container .button-container {
-    margin-left: 16px;
-  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -286,23 +281,31 @@ ul.v2-truck-lineup__navigation {
   }
 
   .v2-truck-lineup__content {
-    max-width: 1000px;
+    max-width: var(--wrapper-width);
   }
 
   .v2-truck-lineup__content .default-content-wrapper {
     align-items: flex-start;
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr 567px 80px 430px 1fr;
   }
 
   .v2-truck-lineup__text {
-    flex-basis: 60%;
+    width: 567px;
+    max-width: none;
     margin: 0;
     text-align: left;
+    text-wrap: wrap;
+    grid-column: 2;
+  }
+
+  .v2-truck-lineup__buttons-container,
+  .v2-truck-lineup__buttons-container .button-container {
+    margin-top: 0;
   }
 
   .v2-truck-lineup__buttons-container {
-    flex-direction: row;
-    margin-top: 0;
+    justify-content: start;
+    grid-column: 4;
   }
 }
