--- a/blocks/dealer-locator/dealer-locator.css
+++ b/blocks/dealer-locator/dealer-locator.css
@@ -5,6 +5,11 @@
     font-family: VolvoNovumRegular,sans-serif,sans-serif;
 }
 
+/* cookie button position fix */
+#onetrust-consent-sdk #ot-sdk-btn-floating.ot-floating-button {
+    bottom: 30px;
+}
+
 main .section.dealer-locator-container > div {
     margin: 0;
 }
@@ -53,10 +58,18 @@ main .section.dealer-locator-container > div {
 
 .dealer-locator {
     width: 100% !important;
-    height: calc(100vh);
+    height: calc(100vh - var(--nav-height));
     position: absolute;
+    top: var(--nav-height);
     left: 0;
 }
+
+@supports (height: 1svh) {
+  .dealer-locator {
+    height: calc(100svh - var(--nav-height));
+  }
+}
+
 .dealer-locator input[type=text],
 .dealer-locator select,
 .dealer-locator textarea {
@@ -88,13 +101,6 @@ main .section.dealer-locator-container > div {
     overflow: unset;
     text-overflow: unset;
     border-radius: unset;
-}
-
-@media (max-width: 992px) {
-    .dealer-locator {
-        height:calc(100% - 6.1em)!important;
-        margin-top: 32px
-    }
 }
 
 .dealer-locator .partsasist-form {
@@ -706,18 +712,19 @@ main .section.dealer-locator-container > div {
     width: 100%
 }
 
+.dealer-locator #map .gmnoprint + .gm-style-cc,
 .dealer-locator #map .gmnoprint {
     top: 0;
     margin-top: 45px
 }
 
 @media (max-width: 992px) {
-    .dealer-locator #map .gmnoprint {
-        display:none
+    .dealer-locator #map .gm-bundled-control {
+        display: none;
     }
 
     .dealer-locator #map {
-        height: 50%
+        height: calc(50% - 41px)
     }
 }
 
