--- a/blocks/v2-media-with-tabs/v2-media-with-tabs.css
+++ b/blocks/v2-media-with-tabs/v2-media-with-tabs.css
@@ -33,17 +33,20 @@
 }
 
 .v2-media-with-tabs .v2-media-with-tabs__tabs-section {
+  display: flex;
+  flex-direction: row;
   order: 1;
   overflow: auto;
   white-space: nowrap;
   padding: 24px 0 32px;
+  gap: 32px;
 }
 
 .v2-media-with-tabs__tabs-section .v2-media-with-tabs__tab {
   background: 0 0;
+  min-width: fit-content;
   border: none;
   border-radius: 1px;
-  display: inline-block;
   text-align: center;
   text-transform: uppercase;
   text-decoration: none;
@@ -52,7 +55,6 @@
   line-height: 100%;
   color: var(--c-grey-4);
   padding: 12px 0;
-  margin: 0 16px;
 }
 
 .v2-media-with-tabs__tabs-section button.v2-media-with-tabs__tab.active {
@@ -137,13 +139,9 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding-bottom: 0;
+    padding: 0;
     margin: 0;
-  }
-
-  .v2-media-with-tabs__tabs-section .v2-media-with-tabs__tab {
-    margin-bottom: 16px;
-    margin-left: 0;
+    gap: 16px;
   }
 
   .v2-media-with-tabs__tabs-section .v2-media-with-tabs__tab:last-of-type {
