last fix and comment

--- a/blocks/v2-media-with-tabs/v2-media-with-tabs.css
+++ b/blocks/v2-media-with-tabs/v2-media-with-tabs.css
@@ -58,22 +58,18 @@
   font-size: var(--f-button-font-size);
   letter-spacing: var(--f-button-letter-spacing);
   line-height: 100%;
-  color: var(--c-grey-4);
+  color: var(--c-grey-600);
   padding: 12px 0;
 }
 
-.section--black-background .v2-media-with-tabs__tabs-section .v2-media-with-tabs__tab {
+/* Gray inactive tabs on dark backgraound */
+.section--black-background .v2-media-with-tabs__tabs-section button.v2-media-with-tabs__tab {
   color: var(--c-grey-300);
 }
 
-.section--black-background .v2-media-with-tabs__tabs-section .v2-media-with-tabs__tab.active {
+.v2-media-with-tabs__tabs-section button.v2-media-with-tabs__tab.active {
   color: var(--text-color);
   border-bottom-color: var(--text-color);
-}
-
-.v2-media-with-tabs__tabs-section button.v2-media-with-tabs__tab.active {
-  color: var(--c-main-black);
-  border-bottom-color: var(--c-main-black);
 }
 
 .v2-media-with-tabs__tabs-section button.v2-media-with-tabs__tab:focus {
